Bug#42704 "Slave_IO_Running" differs in test result (2)  - 'my_real_read' assumes that errno can be read also when no system function    has failed. To avoid spurios errors "errno" must be rest to make sure that    errno from previous affects the current read.  - The reset of errno was removed in 7.0 with. It has as never been done on windows    before but it should be done in the same way for any platform.