include/my_socket_posix.h
@@ -47,6 +47,11 @@ static inline int my_socket_errno()
   return errno;
 }
 
+static inline void my_socket_set_errno(int error)
+{
+  errno= 0;
+}
+
 static inline my_socket my_socket_create(int domain, int type, int protocol)
 {
   my_socket s;
